kafka/tf/azure/ccgateway/scripts/gateway.yaml
apiVersion: platform.confluent.io/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: confluent-for-kubernetes
    app.kubernetes.io/managed-by: kustomize
  name: confluent-gateway
  namespace: confluent
spec:
  replicas: 1
  podTemplate:
    envVars:
      - name: GATEWAY_ROOT_LOG_LEVEL
        value: DEBUG
  image:
    application: confluentinc/confluent-gateway-for-cloud:latest
    init: confluentinc/confluent-init-container:3.1.0
  streamingDomains:
    - name: cc-primary
      type: kafka
      kafkaCluster:
        name: cc-primary-cluster
        bootstrapServers:
          - id: CC_PRIMARY
            endpoint: lkc-dokdm5o.domngv31ozw.eastus2.azure.confluent.cloud:9092
            tls:
              ignoreTrustStoreConfig: true
        nodeIdRanges:
          - name: default
            start: 0
            end: 30
    - name: cc-dr
      type: kafka
      kafkaCluster:
        name: cc-dr-cluster
        bootstrapServers:
          - id: CC_DR
            endpoint: pkc-lgwgm.eastus2.azure.confluent.cloud:9092
            tls:
              #secretRef: cc-dr-tls
              ignoreTrustStoreConfig: true
        nodeIdRanges:
          - name: default
            start: 0
            end: 30
  routes:
    - name: switchover-route
      endpoint: ccgateway.kafka.venky.com:9092
      brokerIdentificationStrategy:
        type: port
      streamingDomain:
        name: cc-primary
        bootstrapServerId: CC_PRIMARY
      security:
        auth: passthrough
        client:
          tls:
            secretRef: gateway-tls
  externalAccess:
    type: loadBalancer
    loadBalancer:
      domain: ccgateway.kafka.venky.com
